--- a/TrickingLibrary.Data/TrickingLibrary.Data.csproj
+++ b/TrickingLibrary.Data/TrickingLibrary.Data.csproj
@@ -1,17 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="wwwroot\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TrickingLibrary.Data\TrickingLibrary.Data.csproj" />
     <ProjectReference Include="..\TrickingLibrary.Models\TrickingLibrary.Models.csproj" />
   </ItemGroup>
-
 </Project>
