--- a/TrickingLibrary.Api/TrickingLibrary.Api.csproj
+++ b/TrickingLibrary.Api/TrickingLibrary.Api.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Models" />
+      <Folder Include="wwwroot" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TrickingLibrary.Data\TrickingLibrary.Data.csproj" />
-    <ProjectReference Include="..\TrickingLibrary.Models\TrickingLibrary.Models.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\TrickingLibrary.Data\TrickingLibrary.Data.csproj" />
+    </ItemGroup>
 
 </Project>
