--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,8 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "@nuxtjs/axios": "^5.3.6",
+    "nuxt": "^2.14.10"
   },
   "devDependencies": {
     "@nuxt/types": "^0.7.9",
