--- a/TrickingLibrary.Api/TrickingLibrary.Api.csproj
+++ b/TrickingLibrary.Api/TrickingLibrary.Api.csproj
@@ -6,11 +6,18 @@
 
     <ItemGroup>
       <Folder Include="ffmpeg" />
+      <Folder Include="Pages\Shared" />
       <Folder Include="wwwroot" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TrickingLibrary.Data\TrickingLibrary.Data.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="IdentityServer4" Version="4.1.1" />
+      <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     </ItemGroup>
 
 </Project>
