--- a/web-client/package.json
+++ b/web-client/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "nuxt": "^2.14.10"
+    "nuxt": "^2.14.10",
+    "oidc-client": "^1.10.1"
   },
   "devDependencies": {
     "@nuxt/types": "^0.7.9",
