--- a/TrickingLibrary.Api/TrickingLibrary.Api.csproj
+++ b/TrickingLibrary.Api/TrickingLibrary.Api.csproj
@@ -17,6 +17,12 @@
       <PackageReference Include="IdentityServer4" Version="4.0.4" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.6.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
+      <PackageReference Include="Swashbuckle.Core" Version="5.6.0" />
     </ItemGroup>
 
 </Project>
